# cli

./: README.md  pyproject.toml
cli/: commandline.py  commandline.pyi
