[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cli"
authors = [
    {name = "barrowcroft", email = "barrowcroft@outlook.com"},
]
description = "A simple command line interface (cli)"
version="1.0.0"

readme = "README.md"
requires-python = ">=3.12"
keywords = ["cli"]
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []